--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,1 +1,9 @@
+/* tailwindcss */
 @import 'tailwindcss';
+
+.myTh {
+	@apply px-6 py-3 text-sm font-semibold text-gray-700;
+}
+.myThead {
+	@apply bg-gray-100 border-b border-gray-200;
+}
