--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,8 @@
 @import 'tailwindcss';
 
 .myTh {
-	@apply px-6 py-3 text-sm font-semibold text-gray-700;
+	@apply px-6 py-3 font-bold text-gray-700;
+	font-size: 16px;
 }
 .myThead {
 	@apply bg-gray-100 border-b border-gray-200;
