--- a/views/nueva_venta.html
+++ b/views/nueva_venta.html
@@ -1,6 +1,30 @@
-<h1 class="text-2xl font-bold">Nueva Venta</h1>
+<div class="mt-8 max-w-7xl mx-auto bg-white p-6 rounded-lg shadow">
+  <h1 class="text-2xl font-bold mb-4">Nueva Venta</h1>
 
-<div class="mt-4 bg-white p-4 rounded shadow">
-  <label class="block font-bold">Producto</label>
-  <input type="text" class="border p-2 w-full rounded" placeholder="Buscar producto...">
+  <!-- BUSCADOR -->
+  <div class="mb-6">
+    <label class="mb-1 font-semibold">Buscar producto por Número de Parte</label>
+    <input id="buscarInput" type="text" placeholder="Ej: P-001" class="w-full p-2 border rounded-lg shadow-sm">
+    <!-- ** Alert ** -->
+    <div id="mensajeError" class="text-red-500 mt-1"></div>
+  </div>
+  <h1 class="text-xl text-center font-bold mb-5">Tabla de Venta</h1>
+  <!-- TABLA DE PRODUCTOS -->
+  <div class="overflow-x-auto rounded-lg shadow-lg border border-gray-200">
+    <table class="w-full bg-white">
+      <thead class="myThead">
+        <tr>
+          <th class="myTh text-left">Número de Parte</th>
+          <th class="myTh text-left">Descripción</th>
+          <th class="myTh text-left">Cantidad</th>
+          <th class="myTh text-left">Tasas</th>
+          <th class="myTh text-left">Precio</th>
+          <th class="myTh text-left">Total</th>
+          <th class="myTh text-center">Acciones</th>
+        </tr>
+      </thead>
+      <tbody id="tablaVenta"></tbody>
+    </table>
+  </div>
+
 </div>
