--- a/views/nueva_venta.html
+++ b/views/nueva_venta.html
@@ -2,7 +2,7 @@
   <h1 class="text-2xl font-bold mb-4">Nueva Venta</h1>
 
   <!-- ** BUSCADOR ** -->
-  <div class="mb-6">
+  <div id="buscador" class="mb-6">
     <label class="mb-1 font-semibold">Buscar producto por Número de Parte</label>
     <input id="buscarInput" type="text" placeholder="Ej: P-001" class="w-full p-2 border rounded-lg shadow-sm">
     <!-- ** Alert ** -->
@@ -28,7 +28,7 @@
   </div>
 
   <!-- ** SECCIÓN: DATOS DEL CLIENTE ** -->
-  <div class="mt-8 p-6 bg-gray-100 rounded-lg">
+  <div id="clienteForm" class="mt-8 p-6 bg-gray-100 rounded-lg">
     <h2 class="text-xl font-bold mb-4">Datos del Cliente</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -38,6 +38,7 @@
         <select id="clienteSelect" class="w-full p-2 rounded border">
           <option value="">-- Selecciona un cliente --</option>
         </select>
+        <div id="errorCliente" class="text-red-500 mt-1 opacity-0"></div>
       </div>
 
       <!-- * Nuevo cliente * -->
@@ -85,7 +86,7 @@
   </div>
 
   <!-- ** SECCIÓN: PAGO Y FACTURA ** -->
-  <div class="mt-8 p-6 bg-gray-100 rounded-lg">
+  <div id="facturaForm" class="mt-8 p-6 bg-gray-100 rounded-lg">
     <h2 class="text-xl font-bold mb-4">Datos de Factura</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -102,6 +103,7 @@
       <div>
         <label class="font-semibold">Número de factura:</label>
         <input id="numeroFactura" type="text" placeholder="Ej: F-2025-001" class="w-full p-2 rounded border">
+        <div id="errorFactura" class="text-red-500 mt-1 opacity-0"></div>
       </div>
 
       <div class="md:col-span-2">
@@ -112,11 +114,13 @@
     </div>
   </div>
 
-  <!-- ** SECCIÓN: FINALIZAR VENTA ** -->
-  <div class="mt-8 mb-16 flex justify-end">
-    <button id="btnFinalizarVenta" class="px-6 py-3 bg-blue-600 text-white rounded-lg text-lg hover:bg-blue-700">
-      Generar Factura
-    </button>
+  <div id="btnVenta">
+    <div id="errorVenta" class="text-red-500 mt-3 opacity-0 mb-2"></div>
+    <!-- ** SECCIÓN: FINALIZAR VENTA ** -->
+    <div class="mt-8 mb-16 flex justify-end">
+      <button id="btnFinalizarVenta" class="px-6 py-3 bg-blue-600 text-white rounded-lg text-lg hover:bg-blue-700">
+        Generar Factura
+      </button>
+    </div>
   </div>
-
 </div>
