--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -22,9 +22,10 @@
           <path stroke-linecap="round" stroke-linejoin="round"
             d="M13 16h-1v-4h-1m1-4h.01M12 2a10 10 0 100 20 10 10 0 000-20z" />
         </svg>
-        <div
-          class="absolute top-0 left-full ml-2 p-3 text-md text-white text-center bg-gray-700 rounded min-w-xs opacity-0 group-hover:opacity-100 transition-opacity">
-          Muestra los siguientes datos de venta: <br> PRODUCTOS | CLIENTES | INGRESO $.
+        <div class="absolute top-0 left-full ml-2 p-3 text-base leading-5 text-center 
+          bg-gray-500 rounded-xl text-white min-w-xs opacity-0 group-hover:opacity-75
+            transition-opacity duration-500 ease-in-out">
+          <b>Muestra los siguientes datos de venta:<br> PRODUCTOS | CLIENTES | INGRESO $.</b>
         </div>
       </div>
     </div>
