--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,4 +1,9 @@
 <div class="grid grid-cols-1 gap-6 p-6">
+  <div class="flex">
+    <div id="chartClientes" class="chart-box"></div>
+    <div id="chartProductos" class="chart-box"></div>
+    <div id="chartIngresos" class="chart-box"></div>
+  </div>
   <!-- Fila superior: KPIs -->
   <div class="grid grid-cols-2 gap-6 p-6">
     <!-- Tarjeta 1: Ventas del día -->
