fix: remove unused class

--- a/views/nueva_venta.html
+++ b/views/nueva_venta.html
@@ -12,7 +12,7 @@
   <!-- ** TABLA DE PRODUCTOS ** -->
   <div class="overflow-x-auto rounded-2xl shadow-lg border border-gray-200">
     <table class="w-full bg-other">
-      <thead class="myThead bg-table rounded-3xl">
+      <thead class="myThead rounded-3xl">
         <tr>
           <th class="myTh text-left">Número de Parte</th>
           <th class="myTh text-left">Descripción</th>
