--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,14 +140,16 @@ button:active {
 }
 
 /* Contenedor del modal con hover profesional */
-#appModal .relative {
+#appModal .relative,
+#modalContainer .relative {
 	transition: all 0.3s ease;
 	box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
 		0 10px 10px -5px rgba(0, 0, 0, 0.1);
 	border: 1px solid #ffffff;
 }
 
-#appModal .relative:hover {
+#appModal .relative:hover,
+#modalContainer .relative:hover {
 	box-shadow: 0 50px 120px -20px rgba(255, 255, 255, 0.5),
 		0 30px 50px -15px rgba(255, 255, 255, 0.5),
 		0 0 0 10px rgba(99, 101, 241, 0.144);
